{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 25,
  "lineage": "66eb5827-46f4-095b-7feb-b022a6cba193",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "INSTAGRAM-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0115bf8fe1870d6ac",
            "domain": "vpc",
            "id": "eipalloc-0115bf8fe1870d6ac",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-252-137.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.252.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTAGRAM-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-03c93234b9bd76b25",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c93234b9bd76b25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024f3648e3eff2c13",
            "private_dns": "ip-10-0-1-213.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_ip": "13.39.233.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08cdcc58ca393bb52",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-077ef701a8cc4d0ff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee52d2ec37faeaef",
            "tags": {
              "Name": "INSTAGRAM-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "INSTAGRAM-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077ef701a8cc4d0ff"
            ]
          },
          "dependencies": [
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTAGRAM-INSTANCE-PRIV1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0b8e88f0b8d75f772",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8e88f0b8d75f772",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084476f17f930e085",
            "private_dns": "ip-10-0-2-158.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf033253216d5c3d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cf9a798b4db85524"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0504268f3e08553eb",
            "tags": {
              "Name": "INSTAGRAM-INSTANCE-PRIV1"
            },
            "tags_all": {
              "Name": "INSTAGRAM-INSTANCE-PRIV1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf9a798b4db85524"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_security_group.INSTAGRAM-SG-PRIV-WEB",
            "aws_security_group.INSTAGRAM-SG-REVERSE",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET1",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTAGRAM-INSTANCE-PRIV2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-00e380c703f344eb8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e380c703f344eb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e80ade3af516d37",
            "private_dns": "ip-10-0-3-74.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0347cb01ed4ede20b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cf9a798b4db85524"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e380df68967d2407",
            "tags": {
              "Name": "INSTAGRAM-INSTANCE-PRIV2"
            },
            "tags_all": {
              "Name": "INSTAGRAM-INSTANCE-PRIV2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf9a798b4db85524"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_security_group.INSTAGRAM-SG-PRIV-WEB",
            "aws_security_group.INSTAGRAM-SG-REVERSE",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET2",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTAGRAM-INSTANCE-PRIV3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-02e3e008b62f652dc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e3e008b62f652dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011e3931c3c40e356",
            "private_dns": "ip-10-0-4-68.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-081821bc7764c77a6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cf9a798b4db85524"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b716b71cbe1f077e",
            "tags": {
              "Name": "INSTAGRAM-INSTANCE-PRIV3"
            },
            "tags_all": {
              "Name": "INSTAGRAM-INSTANCE-PRIV3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf9a798b4db85524"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_security_group.INSTAGRAM-SG-PRIV-WEB",
            "aws_security_group.INSTAGRAM-SG-REVERSE",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET3",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTAGRAM-INSTANCE-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0bd48357b0b3ccec0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd48357b0b3ccec0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0840d80c3fdd58ba5",
            "private_dns": "ip-10-0-1-221.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_ip": "15.236.122.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-048d16a566481722d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-007814d4ac5ef95b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee52d2ec37faeaef",
            "tags": {
              "Name": "INSTAGRAM-INSTANCE-REVERSE"
            },
            "tags_all": {
              "Name": "INSTAGRAM-INSTANCE-REVERSE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007814d4ac5ef95b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_security_group.INSTAGRAM-SG-REVERSE",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "INSTAGRAM-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-00f145e5465f195a4",
            "id": "igw-00f145e5465f195a4",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "INSTAGRAM-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0115bf8fe1870d6ac",
            "association_id": "eipassoc-03386136ab47af5db",
            "connectivity_type": "public",
            "id": "nat-0dbf1567fa0e10b1b",
            "network_interface_id": "eni-006eb176e2f5ea193",
            "private_ip": "10.0.1.167",
            "public_ip": "15.188.252.137",
            "subnet_id": "subnet-0ee52d2ec37faeaef",
            "tags": {
              "Name": "INSTAGRAM-NAT-GTW"
            },
            "tags_all": {
              "Name": "INSTAGRAM-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.INSTAGRAM-EIP",
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "INSTAGRAM-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00f145e5465f195a4",
            "id": "r-rtb-017d305b9e964f5a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017d305b9e964f5a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_internet_gateway_attachment.INSTAGRAM-IGW-ATTACHMENT",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INSTAGRAM-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-005a427788df4e6b4",
            "id": "rtb-005a427788df4e6b4",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbf1567fa0e10b1b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INSTAGRAM-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "INSTAGRAM-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.INSTAGRAM-EIP",
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_nat_gateway.INSTAGRAM-NAT-GTW",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INSTAGRAM-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0a0f38c3d47582551",
            "id": "rtb-0a0f38c3d47582551",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f145e5465f195a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INSTAGRAM-ROUTE1"
            },
            "tags_all": {
              "Name": "INSTAGRAM-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INSTAGRAM-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b34de84d24a36e8",
            "route_table_id": "rtb-005a427788df4e6b4",
            "subnet_id": "subnet-0504268f3e08553eb"
          },
          "dependencies": [
            "aws_eip.INSTAGRAM-EIP",
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_nat_gateway.INSTAGRAM-NAT-GTW",
            "aws_route_table.INSTAGRAM-ROUTE-PRIV",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET1",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INSTAGRAM-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03673893536913d5a",
            "route_table_id": "rtb-005a427788df4e6b4",
            "subnet_id": "subnet-0e380df68967d2407"
          },
          "dependencies": [
            "aws_eip.INSTAGRAM-EIP",
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_nat_gateway.INSTAGRAM-NAT-GTW",
            "aws_route_table.INSTAGRAM-ROUTE-PRIV",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET2",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INSTAGRAM-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebf3169b16beca11",
            "route_table_id": "rtb-005a427788df4e6b4",
            "subnet_id": "subnet-0b716b71cbe1f077e"
          },
          "dependencies": [
            "aws_eip.INSTAGRAM-EIP",
            "aws_internet_gateway.INSTAGRAM-IGW",
            "aws_nat_gateway.INSTAGRAM-NAT-GTW",
            "aws_route_table.INSTAGRAM-ROUTE-PRIV",
            "aws_subnet.INSTAGRAM-PRIV-SUBNET3",
            "aws_subnet.INSTAGRAM-PUB-SUBNET",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INSTAGRAM-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-077ef701a8cc4d0ff",
            "description": "INSTAGRAM-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077ef701a8cc4d0ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "INSTAGRAM-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "INSTAGRAM-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INSTAGRAM-SG-ADMIN"
            },
            "tags_all": {
              "Name": "INSTAGRAM-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INSTAGRAM-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0cf9a798b4db85524",
            "description": "INSTAGRAM-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf9a798b4db85524",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ef701a8cc4d0ff"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "INSTAGRAM-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007814d4ac5ef95b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "INSTAGRAM-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INSTAGRAM-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "INSTAGRAM-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_security_group.INSTAGRAM-SG-REVERSE",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INSTAGRAM-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-007814d4ac5ef95b5",
            "description": "INSTAGRAM-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007814d4ac5ef95b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "INSTAGRAM-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "INSTAGRAM-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ef701a8cc4d0ff"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "INSTAGRAM-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INSTAGRAM-SG-REVERSE"
            },
            "tags_all": {
              "Name": "INSTAGRAM-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INSTAGRAM-SG-ADMIN",
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INSTAGRAM-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0504268f3e08553eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0504268f3e08553eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INSTAGRAM-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "INSTAGRAM-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "dependencies": [
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INSTAGRAM-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0e380df68967d2407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e380df68967d2407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INSTAGRAM-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "INSTAGRAM-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "dependencies": [
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INSTAGRAM-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0b716b71cbe1f077e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b716b71cbe1f077e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INSTAGRAM-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "INSTAGRAM-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "dependencies": [
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INSTAGRAM-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0ee52d2ec37faeaef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee52d2ec37faeaef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INSTAGRAM-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "INSTAGRAM-PUB-SUBNET"
            },
            "vpc_id": "vpc-0c70b52769317dc27"
          },
          "dependencies": [
            "aws_vpc.INSTAGRAM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "INSTAGRAM-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0c70b52769317dc27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed45d2ee55a50c87",
            "default_route_table_id": "rtb-017d305b9e964f5a3",
            "default_security_group_id": "sg-054e4664bdf230d69",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c70b52769317dc27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017d305b9e964f5a3",
            "owner_id": "962615889483",
            "tags": {
              "Name": "INSTAGRAM-VPC"
            },
            "tags_all": {
              "Name": "INSTAGRAM-VPC"
            }
          }
        }
      ]
    }
  ]
}